// Produced by Acceleo JavaScript Generator 1.1.2
import "./SentQueueElement.proto";


package cop1.protobuf;

message COP1SentQueue {
extensions 2 to 102;

  repeated cop1.protobuf.SentQueueElement sentQueueElements = 1;
}
